# least

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  ast.c  ast.cpp  ast.h  ast.hpp  build.sh  dictionary.c  dictionary.cpp  dictionary.h  dictionary.hpp  error.c  error.cpp  error.h  error.hpp  hello_world.least  lcc.c  lcc.cpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  lstring.c  lstring.cpp  lstring.h  lstring.hpp  stack.c  stack.h  tests.sh  util.c  util.cpp  util.h  util.hpp  x86_64.c  x86_64.cpp  x86_64.h  x86_64.hpp
editors/: least-mode.el
elf-test/: build.sh  elf.cpp  elf_consts.hpp  instruction.cpp  instruction.hpp  program.asm
lib/: fprint.asm  putchar.asm  uprint.asm
src/: ast.cpp  ast.hpp  dictionary.cpp  dictionary.hpp  elf.cpp  elf.hpp  elf_consts.hpp  error.cpp  error.hpp  instruction.cpp  instruction.hpp  lcc.cpp  lexer.cpp  lexer.hpp  lstring.cpp  lstring.hpp  macros.hpp  maps.cpp  maps.hpp  semantics.cpp  semantics.hpp  util.cpp  util.hpp  x86_64.cpp  x86_64.hpp
tests/: add.least  add_results.txt  arit_min.least  array.least  array_results.txt  brackets.least  brackets_results.txt  comment.least  complicated_compilation.least  complicated_compilation_results.txt  double.least  double_results.txt  elif.least  elif_results.txt  exit_code.least  fizzbuzz.least  format.least  format_results.txt  getuid.least  getuid_results.txt  hello_world.least  if.least  if2.least  if2_results.txt  if_expr.least  if_expr_results.txt  if_results.txt  int.least  int_min.least  int_results.txt  lessequal.least  lessequal_results.txt  logical.least  logical_results.txt  long_loop.least  long_loop_results.txt  mult.least  mult_results.txt  ops.least  ops_results.txt  (+26 more)
